2009-06-10  Marek Safar  <marek.safar@gmail.com>

	* LockRecursionException.cs: New file.

2009-04-21  Mark Probst  <mark.probst@gmail.com>

	* Thread.cs: Make the execution context field thread-static to
	avoid it being shared between app domains.

2009-04-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Thread.cs: For 2.1 ensure exceptions in threads are handled using the
	UnhandledException event mechanism in System.Windows.Application instead
	of crashing the application.

2009-04-18  Mark Probst  <mark.probst@gmail.com>

	* Thread.cs: Don't keep the current number formatter here because
	it's shared between app domains.

2009-04-18  Mark Probst  <mark.probst@gmail.com>

	* Thread.cs: Make the abort exception state a GC handle, to
	properly separate AppDomains.  Add internal method for getting the
	state object.

	* ThreadAbortException.cs: Get the abort exception state via the
	method in Thread.

2009-04-12 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WaitHandle.cs: implemented 2 missing WaitAny overloads.

2009-03-05 Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WaitHandle.cs: Added missing WaitOne overload.

2009-02-20 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WaitHandle.cs: implemented SignalAndWait.

2009-02-18  Jb Evain  <jbevain@novell.com>

	* SynchronizationContext.cs: add NET_2_1 SetThreadStaticContext
	method, even if already obsolete.

2009-01-30  Andreia Gaita  <avidigal@novell.com>

	* SynchronizationContext.cs: Remove moonlight hacks, dispatcher should
	be able to handle this now.

2008-12-20  Miguel de Icaza  <miguel@novell.com>

	* WaitHandle.cs: Add two overloads that were introduced in 3.5.

2008-11-25  Geoff Norton  <gnorton@novell.com>

	* SynchronizationContext.cs: A temporary horrible hack to SyncContext
	to hard-wire all calls back to the main thread (moonlight-only) so that
	we can use our unit test harness.  This will be fixed for 2.1 when we
	implement Dispatcher properly.
